# ML

./: CMakeLists.txt
include/: lr.h  tensor.h
src/: lr.c  main.c  tensor.c
tests/: CMakeLists.txt  test_lr.c
tests/include/: test_lr.h
